[gd_scene load_steps=2 format=3 uid="uid://0m4vr54laik6"]

[ext_resource type="Script" uid="uid://cg42fdu7y7125" path="res://scripts/menu/upgrades_menu_upgrade_list_item.gd" id="1_pdxdk"]

[node name="UpgradeListItem" type="HBoxContainer"]
theme_override_constants/separation = 10
script = ExtResource("1_pdxdk")

[node name="ValueLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "1"

[node name="UpgradeButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "Здоровье ядра +1"

[node name="PriceLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
